Stop menu entries from wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -565,6 +565,7 @@ input:-webkit-autofill {
 
 #entry-menu>.radius-wrap>div {
     padding: .25em;
+    white-space: nowrap;
 }
 
 #entry-menu>.radius-wrap>div:hover {
